src/stylesheets/styles.css
/* ... */
.contact_form > textarea {
    outline: none;
    border: none;
    background-color: #f4f4f4;
    height: 150px;
    resize: none;
    width: 100%;
    font-family: 'Roboto', sans-serif;
    padding: 15px;
}

.contact_cta {
    height: 50px;
    width: 150px;
    border: none;
    font-family: 'Roboto', sans-serif;
    outline: none;
    transition: 0.2s ease-in-out;
    cursor: pointer;
}

.contact_cta:hover {
    background-color: var(--secondary_color);
    color: #fff;
    transform: translateY(-5px);
}

.contact_cta:active {
    transform: translateY(0px);
    background-color: var(--primary_color);
}

.contact_socials {
    display: flex;
    justify-content: space-evenly;
    height: 100%;
    align-items: center;
}

.contact_socials > a {
    border-radius: 15px;
    text-decoration: none;
    color: grey;
    transition: 0.2s ease-in-out;
}

.contact_socials > a:hover {
    color: var(--darkgrey);
}

.contact_transition {
    width: 100%;
    height: 1000px;
    position: absolute;
    bottom: 0;
    background-image: url(../assets/images/blueTransitional.svg);
    background-position: bottom;
    background-size: cover;
    background-repeat: no-repeat;
}

footer {
    background-color: var(--primary_color);
    /* padding: 0 4% 0 4%; */
    display: flex;
    flex-direction: column;
    align-items: center;
}

.footer_contents {
    display: flex;
    color: #fff;
    border-bottom: 1px solid #2F4E58;
    padding: 100px 0;
    width: 1200px;
}

.footer_header,
.footer_nav {
    width: 50%;
}

.footer_header > h1 {
    width: 700px;
}

.footer_header > p {
    margin-top: 50px;
    font-size: 28px;
}

#footer_header_text1 {
    transition: 0.3s ease-in-out;
    transform: translateX(-100px);
    opacity: 0;
}

#footer_header_text2 {
    transition: 0.3s ease-in-out;
    transform: translateX(-100px);
    opacity: 0;
}

.footer_nav {
    list-style: none;
    display: flex;
    flex-direction: column;
    align-items: flex-end;
}

.footer_nav > li > a {
    text-decoration: none;
    color: #fff;
}

.footer_nav > li:nth-of-type(1) {
    margin: 0 0 10px 0;
}

.footer_nav > li {
    margin: 10px 0;
    font-size: 18px;
    cursor: pointer;
}

.footer_disclaimer {
    display: flex;
    justify-content: center;
    padding: 50px 0;
    color: #fff;
}

/** media queries **/

@media only screen and (max-width: 500px) { /** Mobile Version **/
    .splash_elements_container{
        padding: 0 15%;
    }
    .splash_texts_container {
        text-align: center;
    }
    h1 {
        font-size: 38px;
    }
    .hover_nav_container {
        left: 3%;
        display: none;
    }
    .nav_li_container {
        display: none;
    }
    .nav_home_container {
        display: flex;
        justify-content: flex-end;
        margin: 0 3%;
    }
    .nav_illustration {
        display: none;
    }
    .nav_content {
        width: 100%;
    }
    .nav_inner {
        flex-direction: column;
        width: 80%;
        margin-top: 100px;
    }
    .nav_info {
        display: none;
    }
    .img_header_container {
        height: 300px;
    }
    .center_text {
        width: 100%;
        padding: 0 10%;
    }
    .blog_texts_container {
        width: 80%;
    }
    .project_description {
        display: none;
    }
    .projects_ul {
        display: none;
    }
    .project_container {
        height: 72vh;
        /* width: 100vw; */
        margin: 0 0;
        border-radius: 0px;
    }
    .project_image_container {
        height: 100%;
    }
    .soft_shadow {
        box-shadow: none;
    }
    .project_header > h1 {
        width: 80vw;
        margin-bottom: 80px;
    }
    .projects_showcase {
        width: 100%;
    }
    .project_container:hover {
        box-shadow: none;
    }
    .contact_form_container {
        border-radius: 0;
    }
    .contact_section {
        padding: 0;
    }
    .contact_info {
        display: none;
    }
    .contact_header_desc {
        width: 80%;
    }
    .contact_body {
        justify-content: center;
        margin: 0;
        padding: 0;
    }
    .contact_form {
        width: 80%;
    }
    .footer_contents {
        width: 100%;
    }
    .footer_header {
        width: 100%;
    }
    #footer_header_text1 {
        width: 100%;
        text-align: center;
    }
    #footer_header_text2 {
        text-align: center;
        font-size: 21px;
    }
    .footer_nav {
        display: none;
    }
    .nav_home_container {
        position: absolute;
        right: 0;
        top: 20px;
    }
}

@media only screen and (min-width: 501px) and (max-width: 960px) { /** tablet Version **/

}

@media only screen and (min-width: 768px) {
    /* For desktop: */
    ::-webkit-scrollbar {
        width: 5px;
    }
      
    ::-webkit-scrollbar-thumb {
        border-radius: 10px;
        background-color: grey;
    }
    ::-webkit-scrollbar-track {
        background-color: white;
    }
  }

/* @media only screen and (min-width: 961px) and (max-width: 1919px) {
    
}

@media only screen and (min-width: 1920px) {
    
} */

